[FIXED] - visible text decoration links

--- a/css/styles.css
+++ b/css/styles.css
@@ -246,6 +246,10 @@ hr{
 	margin-top: 40px;
 }
 
+a {
+	text-decoration: none;
+}
+
 .footer {
 	position: fixed;
 	bottom: 0;
